examples/type_system/failing/128_lambda_missing_arrow.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

let f = \x x + 1
let after = 7
